# stock

./: .env  .env.example  .gitignore  DEVELOPMENT.md  README.md  README_运行指南.md  RECOVERY_REPORT.md  backtest_daily.csv  backtest_trades.csv  clean_non_main_board_data.py  config.py  date_counts.csv  debug_ksp.py  delete_st_stocks.py  pyproject.toml  requirements.txt  run_backtest.py  run_backtest_with_tail_exit.py  run_concept_analysis.py  run_continuous_surge_analysis.py  run_score_ranking.py  run_selection.py  temp_check_scores.py  test.py  test_concept_repetition.py  test_update_task_logic.py  util_main.INFO  verify_data_quality.py  verify_update.py
ad/: adata_interface.py
backtest/: README.md  analyzer.py  backtester.py  broker.py  bt_backtester.py  data_feed.py  engine.py  models.py  strategy.py
bao/: bao_interface.py
data/: context.py  repository.py
data_context/: __init__.py  concept_context.py  context.py  test_daily_context.py
data_infra/: bs_sample.py  infra.py
data_prepare/: pattern.py  patternV2.py  prepare.py  rank.py  shrink.py
data_provider/: adata_provider.py
data_server/: context.py  repository.py
database/: base.py  factory.py
docs/: backtest_requirements.md  wyckoff_methodology.md
factors/: __init__.py  distribution_analyzer.py  factor.py
init/: __init__.py  data_prepare.py  industry_prepare.py  sample.py  sql_op.py  validate.py
output/: daily_operation_analysis.csv
plot/: vp_plot.py
quantization/: factor.py  tasks.py  util.py
screener/: base.py  pipeline.py  singularity.py  stability.py
scripts/: analyze_anomalies.py  (+28 more)
(+144 files in other folders)
